crates/uitest/fixtures/ty_check/arg_count_mismatch.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/arg_count_mismatch.fe
---
error[8-0000]: type mismatch
   ┌─ arg_count_mismatch.fe:24:5
   │
24 │     a.add(1)    // TODO: error should suggest Adder::add(..)
   │     ^ expected `usize`, but `Adder` is given

error[8-0023]: argument number mismatch
  ┌─ arg_count_mismatch.fe:7:8
  │
2 │ fn add(_ x: usize, _ y: usize) -> usize {
  │    --- function defined here
  ·
7 │     add(1)
  │        ^^^ expected 2 arguments, but 1 given

error[8-0023]: argument number mismatch
  ┌─ arg_count_mismatch.fe:9:8
  │
2 │ fn add(_ x: usize, _ y: usize) -> usize {
  │    --- function defined here
  ·
9 │     add(1, 2, 3)
  │        ^^^^^^^^^ expected 2 arguments, but 3 given

error[8-0023]: argument number mismatch
   ┌─ arg_count_mismatch.fe:25:10
   │
17 │     fn add(_ a: usize, _ b: usize) -> usize {
   │        --- function defined here
   ·
25 │     a.add(1, 2) // TODO: error should suggest Adder::add(1, 2)
   │          ^^^^^^ expected 2 arguments, but 3 given
